--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -1,7 +1,7 @@
 .testH {
     border-bottom: 1px solid red; 
 }
-.taro-img img{
+.headTabL img{
     display: block;
     border: none;
     width: 100%;
