--- a/src/pages/my/my.css
+++ b/src/pages/my/my.css
@@ -9,7 +9,6 @@
     height: 166px;
     padding: 38px 0 0 30px;
 }
-
 .my .headTop img{
     display: inline-block;
     width: 120px;
@@ -104,6 +103,29 @@
     margin: 8px 0px 0px 0px;
 }
 
+/*postcss-pxtransform weapp eject enable*/
+.my .headTop image{
+    display: inline-block;
+    width: 120px;
+    height: 120px;
+}
 
+.my .headList image{
+    display: block;
+    width: 48px;
+    height: 48px;
+    margin: 0 auto;
+    margin-bottom: 12px;
+}
+.my .headTop .infoGo{
+    display: inline-block;
+    width: 36px;
+    height: 36px;
+    float: right;
+    margin: 40px 30px 0px 0px;
+}
+
+
+/*postcss-pxtransform weapp eject disable*/
 
 
