--- a/src/pages/orderSure/orderSure.css
+++ b/src/pages/orderSure/orderSure.css
@@ -53,7 +53,7 @@
     margin-bottom: 20px;
 }
 .orderSure .orderList{
-    margin-bottom: 40px;
+    margin-top: 40px;
 }
 .orderSure .goods{
     display: flex;
@@ -180,12 +180,16 @@
     color: #7e7e7e;
     padding-left: 30px;
 }
+.cryptonym .weui-cells_checkbox{
+    float: left;
+}
 .orderSure .cryptonym .radio{
     display: inline-block;
     width: 30px;
     height: 30px;
     margin-right: 30px;
-    border: 2px solid red;
+    margin-top: 26px;
+    position: relative;
 }
 .orderSure .footer{
     position: fixed;
